...
    "Increase {0}" to "Увеличить {0}",
    "{0} GB" to "{0} ГБ",
    "{0} MB" to "{0} МБ",
    "{0} kB" to "{0} КБ",
    "{0} B" to "{0} Б",
    "Installed" to "Установлено",
    "Available" to "Доступно",

    // Dialogs.kt
    "OK" to "ОК",
    "Cancel" to "Отмена",
    "Save" to "Сохранить",

...
